Fix: исправление ошибок для прохождения тестов